Add forked tests with comprehensive Java module access for Spark